syntax = "proto3";

package scheduler;

option go_package = "github.com/tatskaari/please-codegen-example/apps/auth_service/proto";


service UserService {
    rpc CreateUser(CreateUserRequest) returns (User) {};
};


message CreateUserRequest {
    string request_id = 1;
    string auth_token = 2;
    User user = 3;
    string password = 4;
}


message User {
    string id = 1;
    string username = 2;
    string email = 3;
}
